#131 test: Controller 계층 슬라이스 테스트 전면 적용
API 계층의 테스트 효율성을 높이기 위해 모든 컨트롤러 테스트를
@WebMvcTest 기반의 슬라이스 테스트로 통일했습니다.

1. ReviewControllerTest 리팩토링
- 무거운 통합 테스트 환경(@AutoConfigureMockMvc) 제거
- Service Mocking 및 SecurityContext 설정을 통한 독립적 테스트 환경 구축

2. 신규 컨트롤러 테스트 추가
- 대상: Reservation, Auth, SeatState, Stadium
- Service 계층을 Mocking하여 순수 API 요청/응답 처리 로직 검증

3. 공통 검증 사항 강화
- 입력값 유효성 검증 (@Valid, UUID 포맷, 필수값 누락 등)
- 비즈니스 예외 발생 시 HTTP 상태 코드 매핑 (400, 401, 404, 409)
- JSON 요청/응답 필드 구조 및 데이터 정확성 검증

Resolves: #131
See also: None